test/tests/stages/18_structures/invalid_types/extra_credit/scalar_required/cast_between_unions.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u1
        Bool: 1
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: var
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 10
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: u1
                    Bool: 1
                  None: 
            CS: 
              CExpression: 
                CCast: 
                  CVar: 
                    TIdentifier: var
                    None: 
                  Structure: 
                    TIdentifier: u1
                    Bool: 1
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
